# Trading-with-Reinforcement-Learning

./: .gitattributes  .gitignore  README.md  TP_RL_Trading.ipynb  agent.py  analysis.py  conftest.py  evaluate.py  network.py  pyproject.toml  q_learning.py  replay_buffer.py  requirements.txt  reward_shaping.py  trading_env.py  train.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: TP_RL_Trading-checkpoint.ipynb
anaconda_projects/db/: project_filebrowser.db
tests/: test_agent.py  test_q_learning.py  test_replay_buffer.py  test_trading_env.py
