[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rl-trading"
version = "0.1.0"
description = "Deep Q-Network trading agent for BTC-USD"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
    "yfinance>=0.2",
    "matplotlib>=3.7",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
omit = [
    "train.py",
    "evaluate.py",
    "analysis.py",
    "reward_shaping.py",
]

[tool.setuptools.packages.find]
where   = ["."]
exclude = ["tests*", "anaconda_projects*"]
